--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,5 @@
 attrs==23.2.0
 Automat==22.10.0
 Babel==2.10.3
-dbus-python==1.3.2
-incremental==22.10.0
-iniconfig==1.1.1
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-launchpadlib==1.11.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-packaging==24.0
-pexpect==4.9.0
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-Pygments==2.17.2
-PyGObject==3.48.2
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-pytest==7.4.4
-python-apt==2.7.7+ubuntu1
-python-debian==0.1.49+ubuntu2
-python-magic==0.4.27
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.31.0
-service-identity==24.1.0
-setuptools==68.1.2
-six==1.16.0
-sos==4.5.6
-ssh-import-id==5.11
-systemd-python==235
-ubuntu-pro-client==8001
+pytest
+pylint
